fix circle button alignment

--- a/wp-content/themes/ecosystem-energy/assets/styles/commons/_buttons.scss
+++ b/wp-content/themes/ecosystem-energy/assets/styles/commons/_buttons.scss
@@ -66,8 +66,9 @@
     @extend .no-icon;
     width: 120px;
     height: 120px;
-    padding: 0;
+    padding: 10px;
     border-radius: 50%;
+    text-align: center;
 
     &:hover {
       transform: scale(1.1);
@@ -79,6 +80,7 @@
     &.small {
       width: 60px;
       height: 60px;
+      padding: 0;
     }
 
     &.disabled {
